traversal.line.traversalbyline.TraversalByLine.scala.error
Compilation error:
TraversalByLine:4: error: '(' expected but '{' found.
  while {finalpos==false
        ^TraversalByLine:19: error: illegal start of simple expression
} 
^